# LLVM_GettingStarted

./: readme.md
calc/: readme.md  rtcalc.c
calc/src/: AST.h  Calc.cpp  CodeGen.cpp  CodeGen.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Sema.cpp  Sema.h
tinylang/: CMakeLists.txt  readme.md
tinylang/cmake/modules/: AddTinylang.cmake
tinylang/include/tinylang/Basic/: Version.h  Version.inc.in
tinylang/lib/Basic/: CMakeLists.txt  Version.cpp
tinylang/tools/: CMakeLists.txt
tinylang/tools/driver/: CMakeLists.txt  Driver.cpp
